--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 .home {
   width: auto;
   background-color: rgb(18, 4, 29);
-  height: 100vh;
+  height: 578px;
   display: grid;
   grid-template-columns: 500px 500px;
   grid-template-rows: 500px 500px;
@@ -21,46 +21,47 @@
   grid-area: div1;
 }
 .titulo {
-  font-size: 120px;
+  font-size: 100px;
   color: rgb(236, 168, 104);
   font-family: fantasy;
   grid-area: titulo;
-  margin-top: 440px;
+  margin-top: 310px;
   margin-left: 45px;
 }
 .rueda1 {
   position: absolute;
   width: 110px;
   height: 110px;
-  margin-left: 575px;
-  margin-top: 320px;
+  margin-left: 470px;
+  margin-top: 220px;
 }
 .rueda2 {
   position: absolute;
   width: 110px;
   height: 110px;
-  margin-left: 485px;
-  margin-top: 310px;
+  margin-left: 380px;
+  margin-top: 210px;
 }
 .proyector {
   position: absolute;
 
-  width: 280px;
-  height: 170px;
-  margin-top: 360px;
-  margin-left: 489px;
+  width: 240px;
+  height: 130px;
+  margin-top: 260px;
+  margin-left: 380px;
 }
 
 .cono {
   width: 0;
   height: 0;
 
-  border-right: 450px solid transparent;
-  border-left: 450px solid transparent;
-  border-top: 900px solid rgb(175, 161, 123);
+  border-right: 250px solid transparent;
+  border-left: 250px solid transparent;
+  border-top: 650px solid rgb(175, 161, 123);
   transform: rotate(90deg);
   position: absolute;
-  margin-left: 1020px;
+
+  margin-left: 790px;
 }
 .navHome {
   position: absolute;
@@ -70,8 +71,8 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  margin-left: 1500px;
-  margin-top: 250px;
+  margin-left: 1050px;
+  margin-top: 140px;
 }
 /* #################### 
    ##### ListFilms ####
@@ -79,15 +80,15 @@
 */
 .divFilms {
   width: auto;
-  height: 40vh;
+  height: auto;
   background-color: rgb(18, 4, 29);
 }
 .navHeader {
   background-color: rgb(18, 4, 29);
   display: flex;
   align-items: center;
-  padding-left: 75px;
-  padding-right: 75px;
+  padding-left: 50px;
+  padding-right: 50px;
   padding-top: 10px;
 }
 
@@ -100,8 +101,6 @@
   display: flex;
   justify-content: space-between;
   padding-left: 10px;
-  margin-top: 100px;
-  margin: 0;
 }
 .listDecoration2 {
   background-color: rgb(18, 4, 29);
@@ -109,14 +108,18 @@
   display: flex;
   justify-content: space-between;
   padding-left: 10px;
-  padding-top: 10px;
+  padding-top: 40px;
   margin: 0;
 }
 h1 {
   margin: 0;
-  padding: 52px;
+  padding: 30px;
+  padding-top: 40px;
   background-color: rgb(18, 4, 29);
-  color: rgb(175, 161, 123);
+  color: rgb(233, 200, 169);
+}
+.noved_search {
+  display: flex;
 }
 
 .link {
@@ -136,7 +139,8 @@ h1 {
 }
 .linkNav {
   text-decoration: none;
-  margin-left: 500px;
+  margin-left: 200px;
+  margin-top: 25px;
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 30px;
@@ -149,14 +153,14 @@ h1 {
 }
 .inputSearch {
   text-decoration: none;
-  margin-top: 150px;
-  margin-left: 750px;
+  margin-top: 30px;
+  margin-left: 500px;
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 30px;
   padding-right: 30px;
   border-radius: 10px;
-  background-color: rgb(161, 122, 85);
+  background-color: rgb(233, 200, 169);
   color: rgb(18, 4, 29);
   font-size: x-large;
   font-family: fantasy;
@@ -181,7 +185,7 @@ h1 {
 .films {
   width: auto;
   background-color: rgb(18, 4, 29);
-  height: 30vh;
+  height: auto;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -192,7 +196,7 @@ h1 {
   color: rgb(172, 149, 86);
 }
 .cartel {
-  width: 150px;
+  width: 140px;
   height: 190px;
 }
 
@@ -202,16 +206,16 @@ h1 {
   max-height: 230px;
 }
 .pelicula h2 {
-  max-width: 150px;
+  max-width: 140px;
   height: 20px;
   text-align: center;
   font-size: small;
 }
 .pelicula h3 {
   border-color: black;
-  width: 150px;
+  width: 140px;
   text-align: center;
-  background-color: crimson;
+  background-color: rgb(136, 2, 29);
   padding-bottom: 2px;
   padding-top: 2px;
   font-size: x-small;
